# agent_harness_lab

./: .env.example  .gitignore  README.md  pyproject.toml
harness_agent/: __init__.py  agent.py  main.py
harness_agent/llm/: providers.py
harness_agent/middleware/: __init__.py  argument_truncation.py  base.py  compact.py  hitl.py  memory.py  patch_tool_calls.py  skills.py  todo.py
harness_agent/prompts/: SOUL.md
harness_agent/skills/general_research/: SKILL.md  manifest.toml  reports.md
harness_agent/skills/job_search/: SKILL.md  manifest.toml  reports.md
harness_agent/skills/stock_research/: SKILL.md  manifest.toml  reports.md
harness_agent/skills/weather_reports/: SKILL.md  manifest.toml  reports.md
harness_agent/tools/: datetime.py  filesystem.py  web_fetch.py  web_search.py
